gestion des caractères spéciaux + texte réel

--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
                     <h2>Programme</h2>
                     <div class="prgmText">
                         <h1>Programme du Samedi 25 juin</h1>
-                        <p>Rendez-vous à la <span class="bold">mairie de Cadenet</span> à <span class="bold">16h</span>
+                        <p>Rendez-vous &agrave; la <span class="bold">mairie de Cadenet</span> &agrave; <span class="bold">16h</span>
                             pour le mariage civil.</p>
-                        <p>Les célébrations se poursuivront à la <span class="bold">Bastide du Laval</span> à partir de
+                        <p>Les c&eacute;l&eacute;brations se poursuivront &agrave; la <span class="bold">Bastide du Laval</span> &agrave; partir de
                             <span class="bold">18h</span> (vous
                             <br />
-                            pourrez prendre le temps de vous rafraîchir ou de flâner sur le domaine
+                            pourrez prendre le temps de vous rafra&icirc;chir ou de fl&acirc;ner sur le domaine
                             <br>
-                            entre la cérémonie civile et la soirée).
+                            entre la c&eacute;r&eacute;monie civile et la soir&eacute;e).
                         </p>
                     </div>
                 </div>
@@ -124,7 +124,7 @@
                     <div class="prgmText2">
                         <h1>Programme du Dimanche 26 juin</h1>
                         <Rendez-vous>Pour profiter plus longtemps de ce moment ensemble, nous vous convions à un <span class="bold">brunch </span> le <span class="bold">lendemain </span>de 
-                            la cérémonie. Rendez-vous en fin<span class="bold"> de matinée</span>, toujours à la Bastide du Laval !</p>
+                            la c&eacute;r&eacute;monie. Rendez-vous en fin<span class="bold"> de matin&eacute;e</span>, toujours &agrave; la Bastide du Laval !</p>
                     </div>
                 </div>
 
@@ -142,21 +142,32 @@
                 </div>
             </div>
             <div class="backgroundBlockInfo">
-                <h2>Lorem ipsum</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta commodi id debitis adipisci et a
-                    laudantium possimus
-                    laborum exercitationem doloremque rem, officiis asperiores sunt delectus similique distinctio nemo
-                    aut assumenda.</p>
-                <h2>Lorem ipsum</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta commodi id debitis adipisci et a
-                    laudantium possimus
-                    laborum exercitationem doloremque rem, officiis asperiores sunt delectus similique distinctio nemo
-                    aut assumenda.</p>
-                <h2>Lorem ipsum</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta commodi id debitis adipisci et a
-                    laudantium possimus
-                    laborum exercitationem doloremque rem, officiis asperiores sunt delectus similique distinctio nemo
-                    aut assumenda.</p>
+                <h2>COVID-19</h2>
+                <p>
+                    Le mariage se tiendra dans <span class="bold" id="jours2"></span> jours, et nous esp&eacute;rons, comme tous, un retour &agrave; la normale d'ici-l&agrave;.
+                    Nous vous tiendrons toutefois inform&eacute;s si d'éventuelles mesures sanitaires devaient être appliqu&eacute;es, notamment lors
+                    de la c&eacute;r&eacute;monie civile. 
+                </p>
+                <h2>Dresscode</h2>
+                <p>
+                    Cela fait 10 ans qu'il n'a pas plu un 25 juin dans le Luberon. Nous attendons donc des temp&eacute;ratures estivales
+                    et un soleil radieux pour la journ&eacute;e, mais sachez, pour ceux et celles qui pr&eacute;voient de faire la f&ecirc;te jusqu'au 
+                    matin, que les nuits sont fra&icirc;ches... Bref, ça tape la journ&eacute;e et ça caille la nuit ! <br> Pr&eacute;voyez une petite veste.
+                </p>
+                <p class="tagLineMcdo">
+                    Ceux qui le souhaitent auront l'occasion de profiter de la piscine le samedi et le dimanche: n'h&eacute;sitez pas &agrave; amener
+                    votre maillot.
+                    On sait que vous serez les plus beaux et les plus belles pour cette journ&eacute;e... 
+                    <br>
+                    Venez comme vous &ecirc;tes ! <img class="logoMcDo" src="./assets/img/mcdo.png" alt="logoMcDo">
+                </Venez>
+                <h2>Transport</h2>
+                <p>
+                    Un parking sera &agrave; disposition pour les fous du volant pour la soir&eacute;e et le dimanche.
+                    <br>
+                    Pour les afficionados du train et de l'avion, n'hésitez pas &agrave; nous pr&eacute;venir aussi en amont que possible pour que
+                    nous puissions organiser les transferts. 
+                </p>
             </div>
         </section>
         <div id="Personnages"></div>
@@ -171,13 +182,13 @@
                             <img src="./assets/img/emoji/emi.JPG" alt="emoji Emi">
                             <h3>Emi</h3>
                             <p>Lorem</p>
-                            <div class="statutEmoji">Lorem ipsum</div>
+                            <div class="statutEmoji">Future mari&eacute;e</div>
                         </div>
                         <div class="emoji">
                             <img src="./assets/img/emoji/quentin.JPG" alt="emoji Quentin">
                             <h3>Quentin</h3>
-                            <p>Lorem</p>
-                            <div class="statutEmoji">Lorem ipsum</div>
+                            <p>"Je peux venir en short ?"</p>
+                            <div class="statutEmoji">Future mari&eacute;</div>
                         </div>
                     </div>
                     <div class="emojiRow1">
@@ -185,51 +196,51 @@
                             <img src="./assets/img/emoji/cathy.JPG" alt="emoji Cathy">
                             <h3>Cathy</h3>
                             <p>Lorem</p>
-                            <div class="statutEmoji">Lorem ipsum</div>
+                            <div class="statutEmoji">Belle-m&egrave;re de la mari&eacute;e</div>
                         </div>
                         <div class="emoji">
                             <img src="./assets/img/emoji/philippe.JPG" alt="emoji Philippe">
                             <h3>Philippe</h3>
                             <p>Lorem</p>
-                            <div class="statutEmoji">Lorem ipsum</div>
+                            <div class="statutEmoji">P&egrave;re de la mari&eacute;e</div>
                         </div>
                         <div class="emoji">
                             <img src="./assets/img/emoji/carine.JPG" alt="emoji Carine">
                             <h3>Carine</h3>
                             <p>Lorem</p>
-                            <div class="statutEmoji">Lorem ipsum</div>
+                            <div class="statutEmoji">M&egrave;re du mari&eacute;</div>
                         </div>
                         <div class="emoji">
                             <img src="./assets/img/emoji/roland.JPG" alt="emoji Roland">
                             <h3>Roland</h3>
-                            <p>Lorem</p>
-                            <div class="statutEmoji">Lorem ipsum</div>
+                            <p>"Y-aura des huitres ?"</p>
+                            <div class="statutEmoji">P&egrave;re du mari&eacute;</div>
                         </div>
                     </div>
                     <div class="emojiRow1">
                         <div class="emoji">
                             <img src="./assets/img/emoji/marjo.JPG" alt="emoji Marjo">
                             <h3>Marjo</h3>
-                            <p>Lorem</p>
-                            <div class="statutEmoji">Lorem ipsum</div>
+                            <p>"Mon +1 fait le PCT..."</p>
+                            <div class="statutEmoji">T&eacute;moin</div>
                         </div>
                         <div class="emoji">
                             <img src="./assets/img/emoji/viviane.JPG" alt="emoji Viviane">
                             <h3>Viviane</h3>
                             <p>Lorem</p>
-                            <div class="statutEmoji">Lorem ipsum</div>
+                            <div class="statutEmoji">T&eacute;moin</div>
                         </div>
                         <div class="emoji">
                             <img src="./assets/img/emoji/pascal.JPG" alt="emoji Pascal">
                             <h3>Pascal</h3>
-                            <p>Lorem</p>
-                            <div class="statutEmoji">Lorem ipsum</div>
+                            <p>"Il fait meilleur ici qu'&agrave; Londres"</p>
+                            <div class="statutEmoji">T&eacute;moin</div>
                         </div>
                         <div class="emoji">
                             <img src="./assets/img/emoji/leo.JPG" alt="emoji L&eacute;o">
                             <h3>Léo</h3>
                             <p>Lorem</p>
-                            <div class="statutEmoji">Lorem ipsum</div>
+                            <div class="statutEmoji">T&eacute;moin</div>
                         </div>
                     </div>
                 </div>
