construction card 2nd hebergment

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                             <img src="./assets/img/emoji/quentin.JPG" alt="emoji Quentin">
                             <h3>Quentin</h3>
                             <p>"Je peux venir en short ?"</p>
-                            <div class="statutEmoji">Future mari&eacute;</div>
+                            <div class="statutEmoji">Futur &eacute;poux</div>
                         </div>
                     </div>
                     <div class="emojiRow1">
@@ -248,11 +248,29 @@
         <section id="hebergement">
             <div id="section4">
                 <h2>H&eacute;bergement</h2>
-                <div>
-                    <h4>H&eacute;bergement</h4>
-                    <div class="hebergement1">
-                        <img src="https://placebear.com/200/300" alt="">
+                <div class="emojiRow1">
+                    <div class="hebergement" id="hebergement1">
+                        <div>
+                            <a href="https://www.airbnb.fr/s/Cadenet/homes?tab_id=home_tab&refinement_paths%5B%5D=%2Fhomes&
+                                            flexible_trip_dates%5B%5D=april&flexible_trip_dates%5B%5D=may&flexible_trip_lengths%5B%5D=weekend_trip&
+                                            date_picker_type=calendar&query=Cadenet&place_id=ChIJo0jm-kkfyhIRX0hKegDPNz8&checkin=2022-06-25&checkout
+                                            =2022-06-26&source=structured_search_input_header&search_type=autocomplete_click"
+                                target="_blank">
+                                <div class="airbnb">
+                                    <i class="fab fa-airbnb"></i>
+                                    <p class="hebergement1Text">airbnb</p>
+                                </div>
+                                <div class="tagLineHeber">Logements sur Cadenet</div>
+                        </div>
+                        </a>
                     </div>
+                    <a href="https://www.bastidebellugue.com/fr/1766715/cadenet" target="_blank" class="lienBellugue">
+                        <div class="hebergement" id="hebergement2">
+                            <div>
+                                <div class="tagLineHeber1">Bastide Bellugue</div>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
@@ -265,7 +283,7 @@
         </section>
     </div>
 
-
+    <script src="https://kit.fontawesome.com/7a0d9585f2.js" crossorigin="anonymous"></script>
     <script src="./assets/js/wedding.js"></script>
     <script src="./assets/js/canva.js"></script>
 </body>
