finalisation partie hebergement

--- a/index.html
+++ b/index.html
@@ -249,6 +249,13 @@
             <div id="section4">
                 <h2>H&eacute;bergement</h2>
                 <div class="emojiRow1">
+                    <a href="https://www.bastidebellugue.com/fr/1766715/cadenet" target="_blank" class="lienBellugue">
+                        <div class="hebergement" id="hebergement2">
+                            <div>
+                                <div class="tagLineHeber1">Bastide Bellugue</div>
+                            </div>
+                        </div>
+                    </a>
                     <div class="hebergement" id="hebergement1">
                         <div>
                             <a href="https://www.airbnb.fr/s/Cadenet/homes?tab_id=home_tab&refinement_paths%5B%5D=%2Fhomes&
@@ -264,10 +271,10 @@
                         </div>
                         </a>
                     </div>
-                    <a href="https://www.bastidebellugue.com/fr/1766715/cadenet" target="_blank" class="lienBellugue">
-                        <div class="hebergement" id="hebergement2">
+                    <a href="https://lemasducolombier.com/" target="_blank" class="lienBellugue">
+                        <div class="hebergement" id="hebergement3">
                             <div>
-                                <div class="tagLineHeber1">Bastide Bellugue</div>
+                                <div class="tagLineHeber1">H&ocirc;tel - Le Mas du Colombier</div>
                             </div>
                         </div>
                     </a>
