--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="navRight">
             <ul id="navbar__list">
                 <li class=""><a class="page-scroll" href="#Personnages">Personnages</a></li>
-                <li class=""><a class="page-scroll" href="#hebergement">H&eacute;bergement</a></li>
+                <li class=""><a class="page-scroll" href="#Hebergements">H&eacute;bergement</a></li>
                 <li class=""><a class="page-scroll" href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -98,7 +98,7 @@
     <div class="allInfo">
         <section id="programme">
             <div id="section1">
-                <canvas id="zoneCanvas" width="1440" height="500"></canvas>
+                <canvas id="zoneCanvas" width="1440" height="800"></canvas>
                 <div class="sectionTitre">
                     <h2>Programme</h2>
                     <div class="prgmText">
@@ -123,7 +123,7 @@
                 <div class="prgmEtTitre2">
                     <div class="prgmText2">
                         <h1>Programme du Dimanche 26 juin</h1>
-                        <Rendez-vous>Pour profiter plus longtemps de ce moment ensemble, nous vous convions à un <span class="bold">brunch </span> le <span class="bold">lendemain </span>de 
+                        <p>Pour profiter plus longtemps de ce moment ensemble, nous vous convions à un <span class="bold">brunch </span> le <span class="bold">lendemain </span>de 
                             la c&eacute;r&eacute;monie. Rendez-vous en fin<span class="bold"> de matin&eacute;e</span>, toujours &agrave; la Bastide du Laval !</p>
                     </div>
                 </div>
@@ -245,9 +245,15 @@
                     </div>
                 </div>
         </section>
+        <div id="Hebergements"></div>
         <section id="hebergement">
             <div id="section4">
                 <h2>H&eacute;bergement</h2>
+                <p>Nous vous proposerons des solutions d'h&eacute;bergement partag&eacute; sur place. Pour ceux qui souhaiteraient toutefois 
+                    plus d'intimit&eacute;,   
+                    <br>
+                    vous trouverez ci-dessous 3 options additionnelles proche du lieux de l'&eacute;v&eacute;nement.
+                </p>
                 <div class="emojiRow1">
                     <a href="https://www.bastidebellugue.com/fr/1766715/cadenet" target="_blank" class="lienBellugue">
                         <div class="hebergement" id="hebergement2">
