travail sur responsivness iphoneX

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
 </head>
 <body>
     <div class="mainHeader">
+        <input type="checkbox" id="nav-check">
+        <div class="nav-btn">
+            <label for="nav-check">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+        </div>
         <div class="navLeft">
             <ul id="navbar__list">
                 <li class=""><a class="page-scroll" href="#accueil">Accueil</a></li>
