--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 </head>
 <body>
     <div class="mainHeader">
-        <input type="checkbox" id="nav-check">
+        <!-- <input type="checkbox" id="nav-check">
         <div class="nav-btn">
             <label for="nav-check">
                 <span></span>
                 <span></span>
                 <span></span>
             </label>
-        </div>
+        </div> -->
         <div class="navLeft">
             <ul id="navbar__list">
                 <li class=""><a class="page-scroll" href="#accueil">Accueil</a></li>
@@ -184,22 +184,22 @@
                 <div class="sectionTitre">
                     <h2>Personnages</h2>
                 </div>
-                <div>
-                    <div class="emojiRow1">
+                <div class="emojiGroupe">
+                    <div class="emojiRow1" id="emojis1">
                         <div class="emoji">
                             <img src="./assets/img/emoji/emi.JPG" alt="emoji Emi">
                             <h3>Emi</h3>
                             <p>Lorem</p>
                             <div class="statutEmoji">Future mari&eacute;e</div>
                         </div>
-                        <div class="emoji">
+                        <div class="emoji" id="emojis2">
                             <img src="./assets/img/emoji/quentin.JPG" alt="emoji Quentin">
                             <h3>Quentin</h3>
                             <p>"Je peux venir en short ?"</p>
                             <div class="statutEmoji">Futur &eacute;poux</div>
                         </div>
                     </div>
-                    <div class="emojiRow1">
+                    <div class="emojiRow1" id="emojis2">
                         <div class="emoji">
                             <img src="./assets/img/emoji/cathy.JPG" alt="emoji Cathy">
                             <h3>Cathy</h3>
