responsiveness personnages sur mobile

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                 <p>Nous vous proposerons des solutions d'h&eacute;bergement partag&eacute; sur place. Pour ceux qui souhaiteraient toutefois 
                     plus d'intimit&eacute;,   
                     <br>
-                    vous trouverez ci-dessous 3 options additionnelles proche du lieux de l'&eacute;v&eacute;nement.
+                    vous trouverez ci-dessous 3 options additionnelles proche du lieu de l'&eacute;v&eacute;nement.
                 </p>
                 <div class="emojiRow1">
                     <a href="https://www.bastidebellugue.com/fr/1766715/cadenet" target="_blank" class="lienBellugue">
