--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                             <img src="./assets/img/emoji/cathy.JPG" alt="emoji Cathy">
                             <h3>Cathy</h3>
                             <p>Lorem</p>
-                            <div class="statutEmoji">Belle-m&egrave;re de la mari&eacute;e</div>
+                            <div class="statutEmoji">BM de la mari&eacute;e</div>
                         </div>
                         <div class="emoji">
                             <img src="./assets/img/emoji/philippe.JPG" alt="emoji Philippe">
@@ -260,7 +260,7 @@
                 <p>Nous vous proposerons des solutions d'h&eacute;bergement partag&eacute; sur place. Pour ceux qui souhaiteraient toutefois 
                     plus d'intimit&eacute;,   
                     <br>
-                    vous trouverez ci-dessous 3 options additionnelles proche du lieu de l'&eacute;v&eacute;nement.
+                    vous trouverez ci-dessous 3 options additionnelles proches du lieu de l'&eacute;v&eacute;nement.
                 </p>
                 <div class="emojiRow1">
                     <a href="https://www.bastidebellugue.com/fr/1766715/cadenet" target="_blank" class="lienBellugue">
