--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                                 target="_blank">
                                 <div class="airbnb">
                                     <i class="fab fa-airbnb"></i>
-                                    <p class="hebergement1Text">airbnb</p>
+                                    <span class="hebergment1Text" id="tagAirbnb">airbnb</span>
                                 </div>
                                 <div class="tagLineHeber">Logements sur Cadenet</div>
                         </div>
