design, couleur, photos

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <ul id="navbar__list">
                 <li class=""><a class="page-scroll" href="#Personnages">Personnages</a></li>
                 <li class=""><a class="page-scroll" href="#Hebergements">H&eacute;bergement</a></li>
-                <li class=""><a class="page-scroll" href="#contact">Contact</a></li>
+                <li class=""><a class="page-scroll" href="#Contact">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -122,7 +122,7 @@
                         </p>
                     </div>
                 </div>
-                <img src="https://placebear.com/300/300" alt="" class="photoPrgm">
+                <img src="./assets/img/piscine1.jpg" alt="Bastide" class="photoPrgm">
                 <div class="backgroundBlock"></div>
             </div>
             <div id="section11">
@@ -149,6 +149,7 @@
                     <img src="https://placebear.com/600/400" alt="">
                 </div>
             </div>
+            <div class="backgroundBlockInfo1"></div>
             <div class="backgroundBlockInfo">
                 <h2>COVID-19</h2>
                 <p>
@@ -295,13 +296,28 @@
                 </div>
             </div>
         </section>
+        <div id="Contact"></div>
         <section id="contact">
             <div id="section5">
                 <h2>Contact</h2>
-                <p>A</p>
-                <p>A</p>
+                <p>Pour toute question n'h&eacute;sitez pas à contacter les futurs mari&eacute;s, les parents ou leurs t&eacute;moins.</p>
+            </div>
+            <div class="support">
+                <div class="tel">
+                    <i class="fas fa-phone-alt"></i>
+                    <span>Support 24/7</span>
+                </div>
+                <div class="email">
+                    <i class="fas fa-envelope"></i>
+                    <span>Disponible par email</span>
+                </div>
             </div>
         </section>
+        <footer>
+            <div>
+                &#xA9; 2021 All rights reserved.
+            </div>
+        </footer>
     </div>
 
     <script src="https://kit.fontawesome.com/7a0d9585f2.js" crossorigin="anonymous"></script>
