photos finalisées + travail design

--- a/index.html
+++ b/index.html
@@ -122,11 +122,13 @@
                         </p>
                     </div>
                 </div>
-                <img src="./assets/img/piscine1.jpg" alt="Bastide" class="photoPrgm">
+                <img src="./assets/img/bdl3.jpg" alt="Bastide" class="photoPrgm">
+                <div class="backgroundBlock1"></div>
                 <div class="backgroundBlock"></div>
             </div>
             <div id="section11">
-                <img src="https://placebear.com/300/300" alt="" class="photoPrgm">
+                <img src="./assets/img/bdl5.jpg" alt="Bastide" class="photoPrgm">
+                <div  class="backgroundBlock1"></div>
                 <div class="backgroundBlock"></div>
                 <div class="prgmEtTitre2">
                     <div class="prgmText2">
@@ -135,7 +137,6 @@
                             la c&eacute;r&eacute;monie. Rendez-vous en fin<span class="bold"> de matin&eacute;e</span>, toujours &agrave; la Bastide du Laval !</p>
                     </div>
                 </div>
-
             </div>
         </section>
         <div id="Informations"></div>
@@ -146,7 +147,7 @@
                     <h2>Informations</h2>
                 </div>
                 <div class="infoText">
-                    <img src="https://placebear.com/600/400" alt="">
+                    <img src="./assets/img/bdl7.jpg" alt="Bastide">
                 </div>
             </div>
             <div class="backgroundBlockInfo1"></div>
