--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                     <h2>Programme</h2>
                     <div class="prgmText">
                         <h1>Programme du Samedi 25 juin</h1>
-                        <p>Rendez-vous &agrave; la <span class="bold">mairie de Cadenet</span> &agrave; <span class="bold">16h</span>
-                            pour le mariage civil.</p>
+                        <p>Rendez-vous &agrave; la <span class="bold">mairie de Cadenet dans l'apr&egrave;s-midi (horaire &agrave; confirmer)
+                            pour la cérémonie civile.</p>
                         <p>Les c&eacute;l&eacute;brations se poursuivront &agrave; la <span class="bold">Bastide du Laval</span> &agrave; partir de
                             <span class="bold">18h</span> (vous
                             <br />
@@ -249,10 +249,10 @@
         <section id="hebergement">
             <div id="section4">
                 <h2>H&eacute;bergement</h2>
-                <p>Nous vous proposerons des solutions d'h&eacute;bergement partag&eacute; sur place. Pour ceux qui souhaiteraient toutefois 
-                    plus d'intimit&eacute;,   
+                <p>Des solutions d'h&eacute;bergement partag&eacute; pourront &ecirc;tre propos&eacute;es sur place. Pour ceux qui souhaiteraient toutefois 
+                    plus de confort et d'intimit&eacute;,   
                     <br>
-                    vous trouverez ci-dessous 3 options additionnelles proches du lieu de l'&eacute;v&eacute;nement.
+                    vous trouverez ci-dessous 3 options proches du lieu de l'&eacute;v&eacute;nement.
                 </p>
                 <div class="emojiRow1">
                     <a href="https://www.bastidebellugue.com/fr/1766715/cadenet" target="_blank" class="lienBellugue">
