correction de la modif du text du prgm

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                     <h2>Programme</h2>
                     <div class="prgmText">
                         <h1>Programme du Samedi 25 juin</h1>
-                        <p>Rendez-vous &agrave; la <span class="bold">mairie de Cadenet dans l'apr&egrave;s-midi (horaire &agrave; confirmer)
-                            pour la cérémonie civile.</p>
+                        <p>Rendez-vous &agrave; la mairie de Cadenet dans l'apr&egrave;s-midi (horaire &agrave; confirmer)
+                            <br> pour la cérémonie civile.</p>
                         <p>Les c&eacute;l&eacute;brations se poursuivront &agrave; la <span class="bold">Bastide du Laval</span> &agrave; partir de
                             <span class="bold">18h</span> (vous
                             <br />
