correction titre Personnage

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="navRight">
             <ul id="navbar__list">
-                <li class=""><a class="page-scroll" href="#Personnages">Personnages</a></li>
+                <li class=""><a class="page-scroll" href="#Personnages">Protagonistes</a></li>
                 <li class=""><a class="page-scroll" href="#Hebergements">H&eacute;bergement</a></li>
                 <li class=""><a class="page-scroll" href="#Contact">Contact</a></li>
             </ul>
@@ -184,7 +184,7 @@
         <section id="personnages">
             <div id="section3">
                 <div class="sectionTitre">
-                    <h2>Personnages</h2>
+                    <h2>Protagonistes</h2>
                 </div>
                 <div class="emojiGroupe">
                     <div class="emojiRow1" id="emojis1">
